--- a/package.json
+++ b/package.json
@@ -10,27 +10,27 @@
   "private": true,
   "dependencies": {},
   "devDependencies": {
-    "coffee-script": "^1.10.0",
-    "del": "^2.2.0",
-    "gulp": "^3.9.0",
-    "gulp-util": "^3.0.7",
-    "gulp-uglify": "^1.5.1",
-    "gulp-coffee": "^2.3.1",
-    "gulp-coffeelint": "^0.6.0",
-    "gulp-rename": "^1.2.2",
-    "gulp-concat": "^2.6.0",
-    "gulp-minify-css": "^1.2.3",
-    "gulp-template-compile": "^1.1.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-webserver": "^0.9.1",
-    "gulp-tar": "^1.8.0",
-    "gulp-gzip": "^1.2.0",
-    "run-sequence": "^1.1.5",
-    "jasmine-core": "^2.4.1",
-    "karma": "^0.13.16",
-    "karma-jasmine": "^0.3.6",
-    "karma-coffee-preprocessor": "^0.3.0",
-    "karma-phantomjs-launcher": "^0.2.2",
-    "phantomjs": "^1.9.19"
+    "coffee-script": "1.10.0",
+    "del": "2.2.1",
+    "gulp": "3.9.1",
+    "gulp-util": "3.0.7",
+    "gulp-uglify": "2.0.0",
+    "gulp-coffee": "2.3.2",
+    "gulp-coffeelint": "0.6.0",
+    "gulp-rename": "1.2.2",
+    "gulp-concat": "2.6.0",
+    "gulp-clean-css": "2.0.12",
+    "gulp-template-compile": "1.2.2",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-webserver": "0.9.1",
+    "gulp-tar": "1.9.0",
+    "gulp-gzip": "1.4.0",
+    "run-sequence": "1.2.2",
+    "jasmine-core": "2.4.1",
+    "karma": "1.1.2",
+    "karma-jasmine": "1.0.2",
+    "karma-coffee-preprocessor": "1.0.1",
+    "karma-phantomjs-launcher": "1.0.1",
+    "phantomjs-prebuilt": "2.1.11"
   }
 }
